# splat-slime-facility-cpp-remake

./: CMakeLists.txt  LICENSE
include/: engine.h  std.h
src/: CMakeLists.txt  engine.cpp  main.cpp
